// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlacementOrdering render shows toggle 1`] = `
<Component
  className="placementOrdering"
>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    show={true}
    toggled={false}
  />
  <OrderingTiler
    includeTargets={true}
    instanceId="3"
    onDropChoice={[Function]}
    onRemoveChoice={[Function]}
    ordering={Object {}}
    tiler={[Function]}
  />
  <WithStyles(Feedback) />
</Component>
`;

exports[`PlacementOrdering render snapshot 1`] = `
<Component
  className="placementOrdering"
>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    toggled={false}
  />
  <OrderingTiler
    includeTargets={true}
    instanceId="1"
    onDropChoice={[Function]}
    onRemoveChoice={[Function]}
    ordering={Object {}}
    tiler={[Function]}
  />
  <WithStyles(Feedback) />
</Component>
`;

exports[`PlacementOrdering render snapshot with rationale 1`] = `
<Component
  className="placementOrdering"
>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    toggled={false}
  />
  <OrderingTiler
    includeTargets={true}
    instanceId="5"
    onDropChoice={[Function]}
    onRemoveChoice={[Function]}
    ordering={Object {}}
    tiler={[Function]}
  />
  <WithStyles(Collapsible)
    labels={
      Object {
        "hidden": "Show Rationale",
        "visible": "Hide Rationale",
      }
    }
  >
    <WithStyles(PreviewPrompt)
      prompt="This is rationale."
    />
  </WithStyles(Collapsible)>
  <WithStyles(Feedback) />
</Component>
`;
